--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,6 @@ steps:
 - task: UiPathTest@5
   inputs:
     testTarget: 'TestSet'
-    orchestratorConnection: 'DevopsUiPathExternalApplication'
+    orchestratorConnection: 'CICDDevops_New'
     testSet: 'Testset'
     folderName: 'Modern'
