Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ steps:
   inputs:
     testTarget: 'TestSet'
     orchestratorConnection: 'CICDDevops_New'
-    testSet: 'Testset'
+    testSet: 'TestSet1'
     folderName: 'Modern'
