--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ steps:
   inputs:
     testTarget: 'TestProject'
     orchestratorConnection: 'CICDDevops_New'
-    testProjectPath: 'C:\Users\atisha.raikar\.omnisharp\Documents\UiPath\CICD_TestAutomation'
+    testProjectPath: 'C:\Users\atisha.raikar\.omnisharp\Documents\UiPath\CICD_TestAutomation\project.json'
     folderName: 'Modern'
