--- a/project.json
+++ b/project.json
@@ -28,13 +28,13 @@
     "readyForPiP": false,
     "startsInPiP": false,
     "mustRestoreAllDependencies": true,
-    "pipType": "ChildSession"
+    "pipType": "ChildSession",
+    "robotVersion": "25.0.0"
   },
   "designOptions": {
     "projectProfile": "Developement",
     "outputType": "Tests",
     "libraryOptions": {
-      "includeOriginalXaml": false,
       "privateWorkflows": []
     },
     "processOptions": {
